--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <button class ="printmoney" onclick="getrich()">Print Money</button>
     <button class="themetoggle" onclick="ThemeToggle()">Toggle Theme</button>
     <button class="autoprinter" onclick="BuyAutoPrinter()">Buy An Auto Printer For: <span id=AutoPrinterCost></span></button>
-    <h class="CantAffordPrinter" id="CantAffordPrinter"></h>
+    <h3 class="CantAffordPrinter" id="CantAffordPrinter"></h3>
 </body>
 <script src="script.js"></script>
 </html>
